snapshots/care/data4life/hc-util-sdk-kmp/error/maven-metadata.xml.md5
c27e2562f4743a8f7230ec19d8afad7d